--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
     <meta name="description" content="Teste seu conhecimento de forma rápida com o EGPN"/>
     <meta name="author" content="Éverton - Ed"/>
     <meta name="copyright" content="© 2021 EGPNT"/>
-    <meta name="url" content="https://ed-egpn-jonas.herokuapp.com"/>
+    <meta name="url" content="https://egpn-geracao-de-provas.vercel.app"/>
     <!-- Facebook -->
     <meta property="og:image" content="https://i.imgur.com/bGsKWUm.png"/>
     <meta property="og:description" content="Teste seu conhecimento de forma rápida com o EGPN"/>
-    <meta property="og: url" content="https://ed-egpn-jonas.herokuapp.com"/>
+    <meta property="og: url" content="https://egpn-geracao-de-provas.vercel.app"/>
     <!-- Twitter -->
     <meta name="twitter:image" content="https://i.imgur.com/bGsKWUm.png"/>
     <meta name="twitter:description" content="Teste seu conhecimento de forma rápida com o EGPN"/>
-    <meta name="twitter:url" content="https://ed-egpn-jonas.herokuapp.com"/>
+    <meta name="twitter:url" content="https://egpn-geracao-de-provas.vercel.app"/>
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
    <!--  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>EGPN</title>
