Gabrito no resultado; atualizaçao de pacotes; outras melhorias

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <meta name="twitter:image" content="https://i.imgur.com/bGsKWUm.png"/>
     <meta name="twitter:description" content="Teste seu conhecimento de forma rápida com o EGPN"/>
     <meta name="twitter:url" content="https://egpn-geracao-de-provas.vercel.app"/>
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-   <!--  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>EGPN</title>
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="https://i.imgur.com/p9uL54S.png" />
     <link rel="icon" sizes="144x144" href="https://i.imgur.com/p9uL54S.png"/>
     <link rel="icon" sizes="128x128" href="https://i.imgur.com/Vs4R6IY.png"/>
     <link rel="icon" sizes="96x96" href="https://i.imgur.com/HTQNXaV.png"/>
